Wed Nov 15 00:13:38 2000  George Lebl <jirka@5z.com>

	* Makefile.am, gwmthumbnail.c:  We don't actually need gwmdesktop
	  and gwmthumbnail, they are not used anywhere int he panel, thus
	  they are now gone, this removes some weirdness

	* extern.c: Whoever heard of the "mail menu" it's "main menu" :)
	  /me beats self

	* foobar-widget.c:  cleanup, set the icon even for skiplist windows
	  so that the icon is better up to date to the actual focused window,
	  only set up the tasklist stuff after foobar was realized, also
	  don't use the pixmap menu item here, but just a normal item with an
	  alignment in it.  Only check for the default icon once and avoid
	  warnings if it doesn't exist.  On setup of the tasklist menu, set
	  the current focused icon

	* taslkist_icon.c: cleanup, and use the existing
	  get_typed_property_data routine from xstuff.  Also fix leaks
	  in the mini icon handling, and fix a possible crash.  Also
	  push error traps for both functions

2000-11-14  Darin Adler  <darin@eazel.com>

	* gwmthumbnail.c: (gwm_thumb_nail_new): Changed the code to match
	the header so it compiles. Sadly, it seems there are some things
	newer in this copy of gwmthumbnail.c and some things newer in the
	desk-guide copy -- changes need to be propogated in both directions
	or perhaps we can get rid of the duplication.

Tue Nov 14 00:47:51 2000  George Lebl <jirka@5z.com>

	* basep-widget.c: set the panel hints on drawers again (doh!)

	* applet.[ch], menu-properties.c:  A bunch of cleanup, also in
	  the apply function we only do things when they are really
	  neccessary, also reduce the amount of statting on each apply by
	  caching the availability of gmenu

	* foobar-widget.c: use %l and not %I for the 12 hour format hour
	  thing, this will not zero pad the hours which is wrong (it looks
	  like 24 hour format then)

Sat Nov 11 17:27:10 2000  George Lebl <jirka@5z.com>

	* applet.c: minor cleanup

Wed Nov 08 21:40:46 2000  George Lebl <jirka@5z.com>
