@@ -1,3 +1,13 @@
+2000-11-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
+
+	* Makefile.am: remove some cruft, yo
+
+	* foobar-widget.c (add_task): add a divider which seperates tasks
+	on the current desktop from tasks on other desktops.
+
+	* tasklist_icon.c (tasklist_icon_check_x): pass the window when
+	creating the mask
+
 Wed Nov 15 00:13:38 2000  George Lebl <jirka@5z.com>
 
 	* Makefile.am, gwmthumbnail.c:  We don't actually need gwmdesktop
